# r-core

./: .gitignore  Cargo.toml  README.md  debug.sh  objcopy.sh  riscv64-virt.dtb  riscv64-virt.dts  run.sh
easy-fs/: Cargo.toml
easy-fs-use/: Cargo.toml  build.sh
easy-fs-use/src/: block_file.rs  lib.rs  main.rs
easy-fs/src/: bitmap.rs  block_cache.rs  block_dev.rs  efs.rs  layout.rs  lib.rs  vfs.rs
os/: Cargo.toml  build.rs  build.sh  listdts.sh  objcopy.sh  run.sh
os/src/: batch.rs  config.rs  console.rs  entry.asm  lang_items.rs  linker.ld  linker_app.asm  linker_app.asm.example  loader.rs  logging.rs  main.rs  sbi.rs  timer.rs
os/src/boards/: mod.rs  qemu.rs
os/src/drivers/: mod.rs  plic.rs
os/src/drivers/block/: mod.rs  virtio_blk.rs
os/src/drivers/bus/: virtio.rs
os/src/drivers/chardev/: mod.rs  ns16550a.rs
os/src/drivers/gpu/: mod.rs
os/src/drivers/input/: mod.rs
os/src/drivers/net/: mod.rs
os/src/fs/: inode.rs  mod.rs  pipe.rs  stdio.rs
os/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  page_table.rs
os/src/net/: mod.rs  port_table.rs  socket.rs  tcp.rs  udp.rs
os/src/sync/: condvar.rs  mod.rs  mutex.rs  semaphore.rs  up.rs
os/src/syscall/: fs.rs  gui.rs  input.rs  mod.rs  net.rs  process.rs  sync.rs  thread.rs
os/src/task/: action.rs  context.rs  id.rs  manager.rs  mod.rs  pid.rs  process.rs  processor.rs  signal.rs  switch.asm  switch.rs  task.rs
os/src/trap/: context.rs  mod.rs  trap.asm
src/: lang_items.rs  main.rs
user/: Cargo.toml  build.sh  run.sh
user/.cargo/: config.toml
user/src/: console.rs  io.rs  lang_items.rs  lib.rs  linker.ld  net.rs  signal.rs  syscall.rs
virtio-drivers/: Cargo.toml
virtio-drivers/src/: blk.rs  gpu.rs  hal.rs  header.rs  input.rs  lib.rs  net.rs  queue.rs
virtio-drivers/src/hal/: fake.rs
