[package]
name = "os"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "os"
test = false
bench = false

[dependencies]
sbi-rt = { version = "0.0.3", features = ["legacy"] }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
buddy_system_allocator = "0.6"