[package]
name = "os"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "os"
test = false
bench = false

[dependencies]
sbi-rt = { version = "0.0.3", features = ["legacy"] }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
riscv = { git = "https://github.com/trytew/riscv", features = ["inline-asm"] }
# 指定 commit id = 4ee80e5 的代码版本
virtio-drivers = { git = "https://github.com/trytew/virtio-drivers", rev = "4ee80e5" }
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
xmas-elf = "0.7.0"
easy-fs = { path = "../easy-fs" }