[package]
name = "user_lib"
version = "0.1.0"
edition = "2024"

[lib]
name = "user_lib"
test = false
bench = false

[[bin]]
name = "initproc"
test = false
bench = false

[[bin]]
name = "user_shell"
test = false
bench = false

[[bin]]
name = "exit"
test = false
bench = false

[[bin]]
name = "fantastic_text"
test = false
bench = false

[[bin]]
name = "fork_exec"
test = false
bench = false

[[bin]]
name = "hello_world"
test = false
bench = false

[[bin]]
name = "fork_test"
test = false
bench = false

[[bin]]
name = "fork_test_2"
test = false
bench = false

[[bin]]
name = "fork_test_smpl"
test = false
bench = false

[[bin]]
name = "fork_tree"
test = false
bench = false

[dependencies]
riscv = "0.15.0"
buddy_system_allocator = "0.6"
