[package]
name = "user_lib"
version = "0.1.0"
edition = "2024"

[lib]
name = "user_lib"
test = false
bench = false

[[bin]]
name = "initproc"
test = false
bench = false

[[bin]]
name = "user-shell"
test = false
bench = false

[[bin]]
name = "exit"
test = false
bench = false

[[bin]]
name = "fantastic-text"
test = false
bench = false

[[bin]]
name = "fork-exec"
test = false
bench = false

[[bin]]
name = "hello-world"
test = false
bench = false

[[bin]]
name = "fork-test"
test = false
bench = false

[[bin]]
name = "fork-test-2"
test = false
bench = false

[[bin]]
name = "fork-test-simple"
test = false
bench = false

[[bin]]
name = "fork-tree"
test = false
bench = false

[[bin]]
name = "matrix"
test = false
bench = false

[[bin]]
name = "sleep"
test = false
bench = false

[[bin]]
name = "sleep-simple"
test = false
bench = false

[[bin]]
name = "stack-overflow"
test = false
bench = false

[[bin]]
name = "yield"
test = false
bench = false

[[bin]]
name = "user-tests"
test = false
bench = false

[[bin]]
name = "touch-file-a"
test = false
bench = false

[[bin]]
name = "cat-file-a"
test = false
bench = false


[[bin]]
name = "huge-write"
test = false
bench = false

[dependencies]
riscv = "0.15.0"
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
